--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
 
-RealWorld/Drift Detection/HIGGS_UCI/data0.mat
-RealWorld/Drift Detection/HIGGS_UCI/data1.mat
+RealWorld/Drift Detection/HIGGS_UCI/Data/
 RealWorld/MiniBooNE_particle/MiniBooNE_PID.txt
